[package]
name = "yee-srml-crfg"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
crfg-primitives = { path = "../../core/crfg/primitives", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
session = { package = "srml-session", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
consensus = { package = "srml-consensus", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
finality-tracker = { package = "srml-finality-tracker", path = "../yee-tracker" , default_features = false}
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0", default-features = false }

[dev-dependencies]
runtime-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"crfg-primitives/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"consensus/std",
	"session/std",
	"finality-tracker/std",
]
