[package]
name = "yee-srml-crfg"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
crfg-primitives = { path = "../../core/crfg/primitives", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
session = { package = "srml-session", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
consensus = { package = "srml-consensus", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
finality-tracker = { package = "srml-finality-tracker", path = "../yee-tracker" , default_features = false}
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa", default-features = false }

[dev-dependencies]
runtime-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"crfg-primitives/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"consensus/std",
	"session/std",
	"finality-tracker/std",
]
