[package]
name = "yee-srml-crfg"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
crfg-primitives = { path = "../../core/crfg/primitives", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
session = { package = "srml-session", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
consensus = { package = "srml-consensus", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
finality-tracker = { package = "srml-finality-tracker", path = "../yee-tracker" , default_features = false}
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94", default-features = false }

[dev-dependencies]
runtime-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"crfg-primitives/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"consensus/std",
	"session/std",
	"finality-tracker/std",
]
