[package]
name = "yee-srml-executive"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
balances = { package = "yee-srml-balances", path = "../yee-balances", default-features = false }
yee-relay = { package = "yee-srml-relay", path = "../yee-relay", default-features = false }


[dev-dependencies]
hex-literal = "0.1.0"
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
srml-indices = { git = "https://github.com/yeeco/substrate.git",  branch = "yee-v1.0" }
balances = { package = "yee-srml-balances", path = "../yee-balances" }
parity-codec-derive = { version = "3.1" }

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde",
	"parity-codec/std",
	"primitives/std",
	"runtime_io/std",
	"system/std",
]
