[package]
name = "yee-srml-executive"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
balances = { package = "yee-srml-balances", path = "../yee-balances", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
relay = { package = "yee-srml-relay", path = "../yee-relay", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }
hash-db = { version = "0.12", default-features = false }
merkle-light = { package = "merkle_light", git = "https://github.com/yeeco/merkle_light.git", branch = "yee", default-features = false }
yee-merkle = { git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
hashbrown = "0.8.0"

[dev-dependencies]
hex-literal = "0.1.0"
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
srml-indices = { git = "https://github.com/yeeco/substrate.git",  rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
balances = { package = "yee-srml-balances", path = "../yee-balances" }
parity-codec-derive = { version = "3.1" }

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde",
	"parity-codec/std",
	"primitives/std",
	"runtime_io/std",
	"system/std",
	"relay/std",
	"yee-sr-primitives/std",
	"merkle-light/std",
	"yee-merkle/std",
]
