[package]
name = "yee-srml-pow"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
srml-timestamp = { package = "srml-timestamp", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
yee-srml-sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
[features]
default = ["std"]
std = [
    "serde",
    "rstd/std",
    "primitives/std",
    "srml-support/std",
    "system/std",
    "parity-codec/std",
]
