[package]
name = "yee-srml-pow"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
srml-timestamp = { package = "srml-timestamp", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
yee-srml-sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
[features]
default = ["std"]
std = [
    "serde",
    "rstd/std",
    "primitives/std",
    "srml-support/std",
    "system/std",
    "parity-codec/std",
]
