[package]
name = "yee-srml-pow"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
srml-timestamp = { package = "srml-timestamp", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
yee-srml-sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
[features]
default = ["std"]
std = [
    "serde",
    "rstd/std",
    "primitives/std",
    "srml-support/std",
    "system/std",
    "parity-codec/std",
]
