[package]
name = "yee-srml-relay"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.2", features = ["derive"], default-features = false }
primitives = { package = "sr-primitives",  git = "https://github.com/yeeco/substrate.git", rev = "862223e167736fa1ce7532766d020c7f48802327", default-features = false }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "862223e167736fa1ce7532766d020c7f48802327", default-features = false }
balances = { package =  "yee-srml-balances", path = "../yee-balances", default-features = false }
assets = { package = "yee-srml-assets", path = "../yee-assets", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "primitives/std",
    "srml-support/std",
    "system/std",
    "rstd/std",
    "balances/std",
    "assets/std",
    "yee-sr-primitives/std"
]
