[package]
name = "yee-srml-sharding"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
sharding_primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default_features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "mn/v1.2" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "mn/v1.2" }
support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "mn/v1.2" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "mn/v1.2" }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "serde",
    "sharding_primitives/std",
    "runtime-primitives/std",
    "support/std",
    "system/std",
]
