[package]
name = "yee-srml-storage"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { version = "3.2", features = ["derive"], default-features = false }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "92524273ee4387871e6b8472136edfc19e03b728" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "92524273ee4387871e6b8472136edfc19e03b728" }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "srml-support/std",
    "system/std",
    "rstd/std",
]
