[package]
name = "yee-srml-storage"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { version = "3.2", features = ["derive"], default-features = false }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "srml-support/std",
    "system/std",
    "rstd/std",
]
