[package]
name = "yee-srml-sudo"
version = "1.0.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
parity-codec-derive = { version = "3.1", default-features = false }
sr-std = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }
sr-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }
srml-support-procedural = { package = "srml-support-procedural", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }

[dev-dependencies]
sr-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "9e048aacc2357d7353f221221842e8a579eb3ca9", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"parity-codec-derive/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
]
